# pymatis

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml
cli/: matis_cli.py
src/pymatis/: client.py  constants.py  device.py  exceptions.py  factory.py  mt53r.py  properties.py  registers.py
