[project]
name = "pymatis"
description = "Python library to interface with Matismart IoT electrical devices"
readme = "README.md"

authors = [
  { name = "Samuel Cabrero", email = "samuel@orica.es" },
]
license = { file="LICENSE" }
keywords = ["Matismart", "modbus", "modbus-tcp", "modbus-rtu"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

dynamic = ["version"]

requires-python = ">= 3.13"

dependencies = [
    "pymodbus>=3.11.2,<4",
    "pyserial-asyncio>=0.6",
    "aiocmd>=0.1.5"
]

[dependency-groups]
typing = ["mypy", "pyright", "types-pyserial"]
linting = ["pylint"]
tests = ["pytest", "pytest-asyncio", "pytest-reserial"]
dev = [{include-group = "typing"}, {include-group = "linting"}, {include-group = "tests"}, "pre-commit"]

[project.urls]
Homepage = "https://github.com/scabrero/pymatis"
Repository = "https://github.com/scabrero/pymatis.git"
Issues = "https://github.com/scabrero/pymatis/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pymatis"]

[tool.pytest.ini_options]
pythonpath = ["src/", "."]

[tool.mypy]
python_version = "3.13"
pretty = true
follow_imports = "silent"
ignore_missing_imports = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.ruff.lint.pycodestyle]
max-line-length = 120
